--- a/monitor/nodered/Dockerfile
+++ b/monitor/nodered/Dockerfile
@@ -2,4 +2,5 @@ FROM nodered/node-red:latest
 USER root
 RUN npm install node-red-dashboard
 RUN npm install node-red-contrib-influxdb
+RUN npm install node-red-node-email
 USER node-red
