--- a/monitor/nodered/data/package.json
+++ b/monitor/nodered/data/package.json
@@ -7,6 +7,7 @@
         "@terranlabs/email-nodes": "~2.0.1",
         "node-red-contrib-coap": "~0.8.0",
         "node-red-dashboard": "~3.6.1",
+        "node-red-node-email": "~3.0.3",
         "node-red-node-mysql": "~1.0.3"
     }
 }
