Set up Grafana dashboard with imported APIs.

--- a/.env
+++ b/.env
@@ -16,5 +16,8 @@ TELEGRAF_MOSQUITTO_TOPICS_INT='"/smart/int/#"'
 TELEGRAF_MOSQUITTO_TOPICS_FLOAT='"/smart/float/#"'
 TELEGRAF_DATA_FORMAT=value
 
+#Grafana configurations
+GRAFANA_READING_BUCKET_TOKEN=OVAZ6kVsz5WL2h3LXPU1Fcx-udc0sy8OfHs6IoPQClCdTmhlZy-k3nYNr55nS9oLr1J-h_F_IMpJs-vJHT4d1Q==
+
 #Node-red configurations
 TZ=Europe/Rome
