--- a/monitor/nodered/data/.config.users.json
+++ b/monitor/nodered/data/.config.users.json
@@ -19,7 +19,7 @@
         "debug": {
             "filter": "filterAll"
         },
-        "menu-menu-item-palette": false,
+        "menu-menu-item-palette": true,
         "menu-menu-item-sidebar": true
     }
 }
