--- a/monitor/nodered/data/.config.users.json
+++ b/monitor/nodered/data/.config.users.json
@@ -14,6 +14,12 @@
             },
             "tours": {
                 "welcome": "4.0.8"
+            },
+            "dialog": {
+                "export": {
+                    "pretty": false,
+                    "json-view": true
+                }
             }
         },
         "debug": {
