Added more flexibility in changing the values of the six sensors. Grafana and Node-RED dashboard modified.

--- a/monitor/nodered/data/.config.nodes.json
+++ b/monitor/nodered/data/.config.nodes.json
@@ -691,8 +691,8 @@
     "node-red-node-email": {
         "name": "node-red-node-email",
         "version": "3.0.3",
-        "local": true,
-        "user": true,
+        "local": false,
+        "user": false,
         "nodes": {
             "email": {
                 "name": "email",
@@ -702,10 +702,10 @@
                     "e-mail mta"
                 ],
                 "enabled": true,
-                "local": true,
+                "local": false,
                 "user": false,
                 "module": "node-red-node-email",
-                "file": "/data/node_modules/node-red-node-email/61-email.js"
+                "file": "/usr/src/node-red/node_modules/node-red-node-email/61-email.js"
             }
         }
     },
