Updated the telegraf consumer to work with json objets; Updated node-red flow to build the json format expected by telegraf

--- a/knowledge/telegraf/mqtt_client.conf
+++ b/knowledge/telegraf/mqtt_client.conf
@@ -124,24 +124,61 @@
   # tls_key = "/etc/telegraf/key.pem"
   ## Use TLS but skip chain & host verification
   # insecure_skip_verify = false
+
 # Read metrics from MQTT topic(s)
 [[inputs.mqtt_consumer]]
   servers = ["$TELEGRAF_MOSQUITTO_SERVER"]
-  name_prefix = "int_"
 
   ## Topics that will be subscribed to.
-  topics = [$TELEGRAF_MOSQUITTO_TOPICS_INT]
-  data_format = "$TELEGRAF_DATA_FORMAT"
-  data_type = "integer"
+  topics = [$TELEGRAF_MOSQUITTO_TOPICS]
+  #data_format = "$TELEGRAF_DATA_FORMAT"
+  data_format = "json_v2"
 
-[[inputs.mqtt_consumer]]
-  servers = ["$TELEGRAF_MOSQUITTO_SERVER"]
-  name_prefix = "float_"
+  [[inputs.mqtt_consumer.json_v2]]
+        measurement_name_path = "measurement" # A string with valid GJSON path syntax, will override measurement_name
+        #timestamp_path = "" # A string with valid GJSON path syntax to a valid timestamp (single value)
+        #timestamp_format = "" # A string with a valid timestamp format (see below for possible values)
+        #timestamp_timezone = "" # A string with with a valid timezone (see below for possible values)
+
+        [[inputs.mqtt_consumer.json_v2.field]]
+            path = "value" # A string with valid GJSON path syntax
+            #rename = "sensor" # A string with a new name for the tag key
+            #type = "data_type" # A string specifying the type (int,uint,float,string,bool)
+            optional = false # true: suppress errors if configured path does not exist
+        [[inputs.mqtt_consumer.json_v2.tag]]
+            path = "room" # A string with valid GJSON path syntax
+            #rename = "new name" # A string with a new name for the tag key
+            type = "string" # A string specifying the type (int,uint,float,string,bool)
+            optional = false # true: suppress errors if configured path does not exist
+        [[inputs.mqtt_consumer.json_v2.tag]]
+            path = "sensor" # A string with valid GJSON path syntax
+            #rename = "new name" # A string with a new name for the tag key
+            type = "string" # A string specifying the type (int,uint,float,string,bool)
+            optional = false # true: suppress errors if configured path does not exist
+        [[inputs.mqtt_consumer.json_v2.tag]]
+            path = "value_name" # A string with valid GJSON path syntax
+            #rename = "new name" # A string with a new name for the tag key
+            type = "string" # A string specifying the type (int,uint,float,string,bool)
+            optional = true # true: suppress errors if configured path does not exist
+
+# Read metrics from MQTT topic(s)
+#[[inputs.mqtt_consumer]]
+#  servers = ["$TELEGRAF_MOSQUITTO_SERVER"]
+#  name_prefix = "int_"
 
   ## Topics that will be subscribed to.
-  topics = [$TELEGRAF_MOSQUITTO_TOPICS_FLOAT]
-  data_format = "$TELEGRAF_DATA_FORMAT"
-  data_type = "float"
+#  topics = [$TELEGRAF_MOSQUITTO_TOPICS_INT]
+#  data_format = "$TELEGRAF_DATA_FORMAT"
+#  data_type = "integer"
+
+#[[inputs.mqtt_consumer]]
+#  servers = ["$TELEGRAF_MOSQUITTO_SERVER"]
+#  name_prefix = "float_"
+
+  ## Topics that will be subscribed to.
+#  topics = [$TELEGRAF_MOSQUITTO_TOPICS_FLOAT]
+#  data_format = "$TELEGRAF_DATA_FORMAT"
+#  data_type = "float"
 
 
   ## Enable extracting tag values from MQTT topics
