--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
         ipv4_address: 172.30.0.100
     volumes:
       - $PWD/monitor/nodered/data:/data
+    depends_on:
+      - mosquitto
 
   mosquitto:
     container_name: se4as-project-mosquitto
@@ -75,7 +77,7 @@ services:
         ipv4_address: 172.30.0.105
 
   sensor:
-    container_name: se4as-project-sensor
+    container_name: se4as-project-sensors
     build:
       context: ./monitor/sensors/
       dockerfile: Dockerfile
