Modified the Grafana version for later customization; Modified the Grafana token in the .yml file; Created panels in the Grafana dashboard; Added variables that, when selected, show the associated sensors and hide the unrelated ones.

--- a/.env
+++ b/.env
@@ -20,6 +20,7 @@ TELEGRAF_DATA_FORMAT=value
 
 #Grafana configurations
 GRAFANA_READING_BUCKET_TOKEN=-Js8srkHc1vUjCy_DfLisyU-kZlhE5jtOKU-nWO6JpHUU0dJUVIznLNahr6NA27itdUaIAcBWxKWUEEzUzRoMw==
+GF_FEATURE_TOGGLES_ENABLE=dashboardNewLayouts,kubernetesDashboards,dashboardScene
 
 #Node-red configurations
 TZ=Europe/Rome
